test/fixtures/diagnostics/type-checker/negative/integral-bitwise-invalid/input.tysh
namespace Samples.TypeChecker.IntegralBitwiseInvalid

let stringOr = "a" | "b"

let decimalXor = 1m ^ 2m

let nullable: int? = 1

let nullableComplement = ~nullable

let stringComplement = ~"a"
